--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vite": "^7.0.0"
   },
   "dependencies": {
+    "@actioncodes/sdk": "^1.0.4",
     "@solana/wallet-adapter-base": "^0.9.27",
     "@solana/web3.js": "^1.98.2",
     "lit": "^3.3.0"
