--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "vite-plugin-dts": "^4.5.4"
   },
   "dependencies": {
-    "@actioncodes/sdk": "^1.1.0",
     "@solana/wallet-adapter-base": "^0.9.27",
     "@solana/web3.js": "^1.98.2",
+    "@useactio/sdk": "^1.1.3",
     "lit": "^3.3.0"
   }
 }
